--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
       "antd": "^4.18.9",
       "axios": "^0.26.0",
       "craco-less": "^2.0.0",
+      "js-cookie": "^3.0.1",
       "react": "^17.0.2",
       "react-dom": "^17.0.2",
       "react-scripts": "5.0.0",
@@ -45,5 +46,7 @@
          "last 1 safari version"
       ]
    },
-   "devDependencies": {}
+   "devDependencies": {
+      "@types/js-cookie": "^3.0.1"
+   }
 }
