--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
       "js-cookie": "^3.0.1",
       "react": "^17.0.2",
       "react-dom": "^17.0.2",
+      "react-router-dom": "6",
       "react-scripts": "5.0.0",
       "typescript": "^4.4.2",
       "typewriter-effect": "^2.18.2",
